--- a/gb/17/12/2/n9918013.md
+++ b/gb/17/12/2/n9918013.md
@@ -1,68 +1,69 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/lsouru216/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/lsouru216/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/lsouru216/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/lsouru216/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/lsouru216/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/lsouru216/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/lsouru216/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/lsouru216/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/lsouru216/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/lsouru216/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/lsouru216/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/lsouru216/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/lsouru216/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/lsouru216/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/lsouru216/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/lsouru216/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/lsouru216/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/lsouru216/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/lsouru216/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/lsouru216/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/lsouru216/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>南投溪头竹文化节 森林疗育与竹工艺的对话</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2017/12/20171201-biyun-t101-600x400.jpg" />
 <h6>台大实验林管理处12月2日于溪头自然教育园区举办第16届“溪头竹文化节”。图中，左二为台大实验林管理处处长蔡明哲、左一为策展人竹艺家赖进益。（彭秋燕／大纪元）
 </h6>
 <hr>
-<p>【大纪元2017年12月02日讯】（大纪元记者孟宪腾台湾南投报导）<ahref="https://github.com/lsouru216/djy/blob/master/gb/tag/%E5%8F%B0%E5%A4%A7%E5%AE%9E%E9%AA%8C%E6%9E%97.md#1">台大实验林</a>管理处12月2日于<ahref="https://github.com/lsouru216/djy/blob/master/gb/tag/%E6%BA%AA%E5%A4%B4.md#1">溪头</a>自然教育园区举办第16届“溪头<ahref="https://github.com/lsouru216/djy/blob/master/gb/tag/%E7%AB%B9%E6%96%87%E5%8C%96%E8%8A%82.md#1">竹文化节</a>”。活动以“悠悠竹蝶”为主题，搭配蝴蝶蜕变的意象，营造森林疗育的氛围，并以艺术、对话、玩乐三大主轴呈现竹文化。当日吸引许多游客在疗育的森林氛围中体验多元的竹文化活动。</p>
-<p><ahref="https://github.com/lsouru216/djy/blob/master/gb/tag/%E5%8F%B0%E5%A4%A7%E5%AE%9E%E9%AA%8C%E6%9E%97.md#1">台大实验林</a>管理处处长蔡明哲表示，竹子是台湾重要的森林资源，<ahref="https://github.com/lsouru216/djy/blob/master/gb/tag/%E6%BA%AA%E5%A4%B4.md#1">溪头</a>自然教育园区拥有优质的竹子与丰富的森林资源。他透露说，现在连台北市立动物园的熊猫团团和圆圆都是以溪头的竹子为食物。溪头竹子深受大家肯定。</p>
+<p>【大纪元2017年12月02日讯】（大纪元记者孟宪腾台湾南投报导）<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%B0%E5%A4%A7%E5%AE%9E%E9%AA%8C%E6%9E%97.md#1">台大实验林</a>管理处12月2日于<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%BA%AA%E5%A4%B4.md#1">溪头</a>自然教育园区举办第16届“溪头<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%AB%B9%E6%96%87%E5%8C%96%E8%8A%82.md#1">竹文化节</a>”。活动以“悠悠竹蝶”为主题，搭配蝴蝶蜕变的意象，营造森林疗育的氛围，并以艺术、对话、玩乐三大主轴呈现竹文化。当日吸引许多游客在疗育的森林氛围中体验多元的竹文化活动。</p>
+<p><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%B0%E5%A4%A7%E5%AE%9E%E9%AA%8C%E6%9E%97.md#1">台大实验林</a>管理处处长蔡明哲表示，竹子是台湾重要的森林资源，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%BA%AA%E5%A4%B4.md#1">溪头</a>自然教育园区拥有优质的竹子与丰富的森林资源。他透露说，现在连台北市立动物园的熊猫团团和圆圆都是以溪头的竹子为食物。溪头竹子深受大家肯定。</p>
 <p>竹子无论在产业或是文化上都很重要。蔡明哲接着表示，宋代文豪苏轼曾说“宁可食无肉，不可居无竹。”可见竹子对士大夫精神涵养的重要性。他话锋一转表示，台大秉持着大学的社会责任，希望能为社会尽一份心力。近年来，实验林更积极推广森林疗育，更希望结合附近的竹产业及旅宿业共同推动地方产业发展。</p>
-<p>主办单位特别邀请日本竹产业工作人士来台，让在地竹文化与国际接轨。大分县竹产业文化振兴连合会会长岩尾一郎表示，竹文化是东亚地区的共同特色。过去台日<ahref="https://github.com/lsouru216/djy/blob/master/gb/tag/%E7%AB%B9%E8%89%BA.md#1">竹艺</a>关系密切，今日，也将再次利用讲座分享大分县竹产业现况，进行两地竹产业交流。</p>
-<p>现场还举办“竹影陶心茶具之舞展”茶席活动。活动由竹山茶道协会茶艺师们展演茶艺，在法籍<ahref="https://github.com/lsouru216/djy/blob/master/gb/tag/%E7%AB%B9%E8%89%BA.md#1">竹艺</a>家罗仁特．马丁的作品“漂浮茶屋”与悠扬的国乐琴音中，贵宾们细细品茗，感受森林疗育的氛围。而森林生态展示中心更展出与国立台湾工艺研究发展中心共同策划的“竹影陶心茶具展”。</p>
+<p>主办单位特别邀请日本竹产业工作人士来台，让在地竹文化与国际接轨。大分县竹产业文化振兴连合会会长岩尾一郎表示，竹文化是东亚地区的共同特色。过去台日<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%AB%B9%E8%89%BA.md#1">竹艺</a>关系密切，今日，也将再次利用讲座分享大分县竹产业现况，进行两地竹产业交流。</p>
+<p>现场还举办“竹影陶心茶具之舞展”茶席活动。活动由竹山茶道协会茶艺师们展演茶艺，在法籍<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%AB%B9%E8%89%BA.md#1">竹艺</a>家罗仁特．马丁的作品“漂浮茶屋”与悠扬的国乐琴音中，贵宾们细细品茗，感受森林疗育的氛围。而森林生态展示中心更展出与国立台湾工艺研究发展中心共同策划的“竹影陶心茶具展”。</p>
 <p>展览结合竹艺与陶艺两种工艺的美学设计，作品优雅而精致。参展的竹艺家刘兴泽与陶艺家康嘉良提供茶箱组参展，刘兴泽以积层竹做成行动茶盒，盒内可放置竹茶盘及陶茶杯。陶杯外部镶嵌着竹环，别具特色。整组作品精致具有设计感。展出至12月31日止，欢迎民众前往参观。</p>
-<figure id="attachment_9918059" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2017/12/20171201-biyun-t102.jpg"><img class="wp-image-9918059 size-medium" src="https://i.epochtimes.com/assets/uploads/2017/12/20171201-biyun-t102-450x600.jpg" alt="" width="450" b="600" /></a><figcaption class="wp-caption-text">大型竹编曙凤蝶。（彭秋燕／大纪元）</figcaption></figure>
-<figure id="attachment_9918060" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2017/12/20171201-biyun-t103.jpg"><img class="wp-image-9918060 size-large" src="https://i.epochtimes.com/assets/uploads/2017/12/20171201-biyun-t103-600x450.jpg" alt="" width="600" b="450" /></a><figcaption class="wp-caption-text">“竹影陶心茶具之舞展”茶席活动。（彭秋燕／大纪元）</figcaption></figure>
-<figure id="attachment_9918061" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2017/12/20171201-biyun-t104.jpg"><img class="size-large wp-image-9918061" src="https://i.epochtimes.com/assets/uploads/2017/12/20171201-biyun-t104-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">贵宾们细细品尝着台大实验林自产的红茶，感受就置身在疗育的氛围中。（彭秋燕／大纪元）</figcaption></figure>
-<figure id="attachment_9918062" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2017/12/20171201-biyun-t105.jpg"><img class="size-large wp-image-9918062" src="https://i.epochtimes.com/assets/uploads/2017/12/20171201-biyun-t105-600x406.jpg" alt="" width="600" b="406" /></a><figcaption class="wp-caption-text">参展的竹艺家刘兴泽。（彭秋燕／大纪元）</figcaption></figure>
-<figure id="attachment_9918063" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2017/12/20171201-biyun-t106.jpg"><img class="size-large wp-image-9918063" src="https://i.epochtimes.com/assets/uploads/2017/12/20171201-biyun-t106-600x450.jpg" alt="" width="600" b="450" /></a><figcaption class="wp-caption-text">茶箱组。（彭秋燕／大纪元）</figcaption></figure>
+<figure id="attachment_9918059" aria-describedby="caption-attachment-9918059" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2017/12/20171201-biyun-t102.jpg"><img class="wp-image-9918059 size-medium" src="https://i.epochtimes.com/assets/uploads/2017/12/20171201-biyun-t102-450x600.jpg" alt="" width="450" b="600" /></a><figcaption id="caption-attachment-9918059" class="wp-caption-text">大型竹编曙凤蝶。（彭秋燕／大纪元）</figcaption></figure>
+<figure id="attachment_9918060" aria-describedby="caption-attachment-9918060" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2017/12/20171201-biyun-t103.jpg"><img class="wp-image-9918060 size-large" src="https://i.epochtimes.com/assets/uploads/2017/12/20171201-biyun-t103-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-9918060" class="wp-caption-text">“竹影陶心茶具之舞展”茶席活动。（彭秋燕／大纪元）</figcaption></figure>
+<figure id="attachment_9918061" aria-describedby="caption-attachment-9918061" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2017/12/20171201-biyun-t104.jpg"><img class="size-large wp-image-9918061" src="https://i.epochtimes.com/assets/uploads/2017/12/20171201-biyun-t104-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-9918061" class="wp-caption-text">贵宾们细细品尝着台大实验林自产的红茶，感受就置身在疗育的氛围中。（彭秋燕／大纪元）</figcaption></figure>
+<figure id="attachment_9918062" aria-describedby="caption-attachment-9918062" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2017/12/20171201-biyun-t105.jpg"><img class="size-large wp-image-9918062" src="https://i.epochtimes.com/assets/uploads/2017/12/20171201-biyun-t105-600x406.jpg" alt="" width="600" b="406" /></a><figcaption id="caption-attachment-9918062" class="wp-caption-text">参展的竹艺家刘兴泽。（彭秋燕／大纪元）</figcaption></figure>
+<figure id="attachment_9918063" aria-describedby="caption-attachment-9918063" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2017/12/20171201-biyun-t106.jpg"><img class="size-large wp-image-9918063" src="https://i.epochtimes.com/assets/uploads/2017/12/20171201-biyun-t106-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-9918063" class="wp-caption-text">茶箱组。（彭秋燕／大纪元）</figcaption></figure>
 <p>责任编辑：陈玟绮</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/17/11/9/n9822818.md#1">溪头竹文化节  体验丰富多元森林疗育</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/17/8/30/n9581267.md#1">客家会馆植物染联展   自然素材染出大千世界</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/12/18/n8604255.md#1">竹子童玩节 DIY制品诉说坚忍精神</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/12/4/n8557539.md#1">台大实验林竹文化节 森林疗育地图全新发表</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/10/5/n8369084.md#1">竹恋巴黎在地时尚 精工竹饰品美学新风貌</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/7/31/n8154152.md#1">竹山推广竹文化  自制餐具吃美食</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/7/14/n8099718.md#1">全台创新景点PK 南投夺冠新竹居次</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/14/12/8/n4314091.md#1">士林菊展移师中台湾   溪头展大立菊</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/14/12/7/n4313333.md#1">溪头竹文化节  竹菊共舞森林嘉年华</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/12/11/23/n3736529.md#1">溪头竹文化节  体验竹韵茶香</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/12/11/23/n3736529.md#1">溪头竹文化节  体验竹韵茶香</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/12/7/n4313333.md#1">溪头竹文化节  竹菊共舞森林嘉年华</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/12/8/n4314091.md#1">士林菊展移师中台湾   溪头展大立菊</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/7/14/n8099718.md#1">全台创新景点PK 南投夺冠新竹居次</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/7/31/n8154152.md#1">竹山推广竹文化  自制餐具吃美食</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/10/5/n8369084.md#1">竹恋巴黎在地时尚 精工竹饰品美学新风貌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/12/4/n8557539.md#1">台大实验林竹文化节 森林疗育地图全新发表</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/12/18/n8604255.md#1">竹子童玩节 DIY制品诉说坚忍精神</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/8/30/n9581267.md#1">客家会馆植物染联展   自然素材染出大千世界</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/11/9/n9822818.md#1">溪头竹文化节  体验丰富多元森林疗育</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/4/n11844351.md#1">遭限制参与WHO 台湾称中共暴露邪恶本质</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/14/n11257164.md#1" target="_blank">【征文】凌晓辉：贞洁论（四）</a></li><li><a href="https://github.com/lsouru216/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/6/27/n9325401.md#1" target="_blank">林展翔：迫害法轮功责任人入美将面临制裁</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/2/n9799674.md#1" target="_blank">刘晓：被中共打造的“革命母亲”杨沫</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/5/n11501516.md#1" target="_blank">欧洲千人法会 西方法轮功学员谈修炼感悟</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">中共发言人赖美军带疫情到武汉 国际哗然</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">陈时中：中共谈疫情没人信 WHO什么都不说</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936666.md#1">美国CDC承认了什么？中共再造假</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">【文史】为一场地震 冥界筹备了50年</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/6/n11920009.md#1">皇上对蝗虫说了一句话 漫天蝗灾彻底消失</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934088.md#1">传钟南山被免职 专家组组长悄悄换人内幕</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936289.md#1">【新闻看点】发哨人引爆舆情 习访武汉 官宣破产</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936264.md#1">孝感高价菜引爆大规模抗议 市民怒喊“下课”</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">【新闻看点】甩锅美军 中共外交部演双簧？</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11927966.md#1">【罗厨寻味】腊味炒荷兰豆</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938032.md#1">父母染疫去世 武汉青山区爆孤儿隔离点</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935159.md#1">世卫改武汉肺炎名称 黄秋生斥责获网友赞爆</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934318.md#1">“女版黄安”刘乐妍返台住院用健保 网友炮轰</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933566.md#1">传中共广电局下限籍令 刘亦菲吴亦凡或受影响</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936148.md#1">意大利为何疫情严重？意裔台湾男星析原因</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933325.md#1">吴亦凡从加国回中国复工 一抵达便被带走隔离</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679895.md#1">梁锦祥：故宫大门倒等异象频现 人类应反思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678880.md#1">【新闻大家谈】防疫手段失控 中共危机加剧</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678895.md#1">【拍案惊奇】遇难者头七 东航空难变政治事件</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/lsouru216/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/lsouru216/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/12/2/n9918013.htm">南投溪头竹文化节 森林疗育与竹工艺的对话</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/12/2/n9918013.htm">南投溪头竹文化节 森林疗育与竹工艺的对话</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/lsouru216/djy/blob/master/gb/17/12/2/n9918013.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/lsouru216/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/lsouru216/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/lsouru216/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/17/12/2/n9918013.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
